--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -39,6 +39,9 @@
     "SubmitButton": "Submit",
     "NextButton": "Next",
     "PreviousButton": "Back",
-    "SavingButton": "Saving"
+    "SavingButton": "Saving",
+    "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
+    "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
+    "SaveError": "We're sorry but an error occurred"
   }
 }
