--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -20,6 +20,9 @@
       "InputPlaceholder": "Password",
       "PasswordWrongError": "Incorrect password. Please try again.",
       "PasswordRequiredError": "Password is required"
+    },
+    "Dashboard": {
+      "Title": "My Dashboard"
     }
   },
   "Common": {
@@ -29,6 +32,9 @@
         "Title": "Submit",
         "AriaLabel": "Submit button"
       }
+    },
+    "Navigation": {
+      "Dashboard": "Dashboard"
     }
   },
   "SDK": {
@@ -40,6 +46,13 @@
     "NextButton": "Next",
     "PreviousButton": "Back",
     "SavingButton": "Saving",
+    "UserActivities": {
+      "ActivityName": "Form",
+      "Summary": "Summary",
+      "ActivityStatus": "Status",
+      "ActivityDate": "Created",
+      "ActivityActions": "Actions"
+    },
     "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
     "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
     "SaveError": "We're sorry but an error occurred"
