--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -328,7 +328,7 @@
     "Title": "Help Center",
     "Collect": {
       "Title": "How to collect your samples",
-      "Text": "It's important to take your test and send it back on the same day, Monday or through Thursday. These are the days that the Broad Institute will process TestBoston samples.",
+      "Text": "It's important to take your test and send it back on the same day, Monday through Thursday. These are the days that the Broad Institute will process TestBoston samples.",
       "Link": "Sample Collection Instructions",
       "IconAlt": "PDF file icon",
       "IframeTitle": "Nasal swab kit directions",
