--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -328,7 +328,7 @@
     "Title": "Sant Èd",
     "Collect": {
       "Title": "Kouman kolekte echantiyon ou yo",
-      "Text": "Li enpòtan pou pran tès ou a epi voye li tounen nan menm jou a, Lendi oswa jiska Jedi. Sa yo se jou yo ki Enstiti a Broad pral trete echantiyon TestBoston.",
+      "Text": "Li enpòtan pou pran tès ou a epi voye li tounen nan menm jou a, Lendi jiska Jedi. Sa yo se jou yo ki Enstiti a Broad pral trete echantiyon TestBoston.",
       "Link": "Enstriksyon Koleksyon Echantiyon",
       "IconAlt": "PDF dosye icon",
       "IframeTitle": "Direksyon twous prelèvman nen yo",
