rarex | add btns text

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -46,6 +46,8 @@
     "NextButton": "Next",
     "PreviousButton": "Back",
     "SavingButton": "Saving",
+    "EditButton": "View/Edit",
+    "ReviewButton": "View",
     "UserActivities": {
       "ActivityName": "Form",
       "Summary": "Summary",
