Add missing button text

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -44,6 +44,7 @@
     },
     "SubmitButton": "Submit",
     "NextButton": "Next",
+    "CloseButton": "Close",
     "PreviousButton": "Back",
     "SavingButton": "Saving",
     "EditButton": "View/Edit",
