--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -172,8 +172,8 @@
         },
         {
           "Name": "Lisa A. Cosimi, MD",
-          "Affiliations": "Associate Physician, Infectious Diseases & Global Health Equity, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
-          "Info": "Dr. Cosimi is an Associate Physician in the Divisions of Global Health Equity & Infectious Diseases at Brigham & Women’s Hospital, and Assistant Professor of Medicine at Harvard Medical School. Her research focuses on ways to strengthen health systems and the quality of healthcare in resource-limited settings."
+          "Affiliations": "Associate Physician, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
+          "Info": "Dr. Cosimi is an associate physician at Brigham and Women’s Hospital, whose work in the divisions of Global Health Equity and Infectious Diseases focuses on strengthening health systems and the quality of healthcare in resource-limited settings."
         },
         {
           "Name": "Deborah T. Hung, MD, PhD",
