--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -172,8 +172,8 @@
         },
         {
           "Name": "Lisa A. Cosimi, MD",
-          "Affiliations": "Doktè ki Asosye ak Maladi enfeksyon & Global Health Equity, Brigham and Women’s Hospital Li Asistan Pwofesè, Harvard Medical School ",
-          "Info": "Dr Cosimi se yon Doktè ki Asosye nan Divizyon Ekite Sante Global & Maladi enfeksyon nan Brigham and Women’s Hospital epi li se yon Asistan Pwofesè nan Medsin nan Harvard Medical School. Rechèch sa li konsantre sèlman sou fason yo ranfòse sistèm sante ak bon jan kalite de swen sante nan anviwònman resous-limite."
+          "Affiliations": "[HT] Associate Physician, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
+          "Info": "[HT] Dr. Cosimi is an associate physician at Brigham and Women’s Hospital, whose work in the divisions of Global Health Equity and Infectious Diseases focuses on strengthening health systems and the quality of healthcare in resource-limited settings."
         },
         {
           "Name": "Deborah T. Hung, MD, PhD",
