Change links and img alts

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -1,5 +1,9 @@
 {
   "Header": {
+    "Alts": {
+      "Logo": "The NAA10 Foundation",
+      "Rarex": "RARE-X"
+    },
     "PoweredBy": "Powered by"
   },
   "Footer": {
