Add translated text

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -172,8 +172,8 @@
         },
         {
           "Name": "Lisa A. Cosimi, MD",
-          "Affiliations": "[ES] Associate Physician, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
-          "Info": "[ES] Dr. Cosimi is an associate physician at Brigham and Women’s Hospital, whose work in the divisions of Global Health Equity and Infectious Diseases focuses on strengthening health systems and the quality of healthcare in resource-limited settings."
+          "Affiliations": "Médica Asociada, Brigham and Women’s Hospital; Profesora Adjunta, Facultad de Medicina de Harvard ",
+          "Info": "Dra. Cosimi es Médica Asociada en Brigham and Women’s Hospital, su trabajo en las divisiones de Equidad Sanitaria Global y Enfermedades Infecciosas se centra en fortalecer los sistemas de salud y la calidad de la atención médica en entornos de recursos limitados."
         },
         {
           "Name": "Deborah T. Hung, MD, PhD",
