--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -172,8 +172,8 @@
         },
         {
           "Name": "Lisa A. Cosimi, MD",
-          "Affiliations": "[HT] Associate Physician, Brigham and Women’s Hospital; Assistant Professor, Harvard Medical School",
-          "Info": "[HT] Dr. Cosimi is an associate physician at Brigham and Women’s Hospital, whose work in the divisions of Global Health Equity and Infectious Diseases focuses on strengthening health systems and the quality of healthcare in resource-limited settings."
+          "Affiliations": "Doktè ki Asosye, Brigham and Women’s Hospital; Asistan Pwofesè, Harvard Medical School",
+          "Info": "Dr. Cosimi se yon doktè asosye nan Brigham and Women’s Hospital Brigham, ki gen travay nan divizyon Global sou Tretman Egal Ego Sante ak Maladi enfeksyon konsantre sou ranfòse sistèm sante ak bon jan kalite a nan swen sante nan anviwònman resous-limite."
         },
         {
           "Name": "Deborah T. Hung, MD, PhD",
