--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/es.json
@@ -232,6 +232,7 @@
             "Language Scientific",
             "Mascon Medical",
             "Microbial Omics Core (MOC), Broad Institute",
+            "Nadya Lopez Zalba, Traductora",
             "UPS"
           ]
         }
