--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -55,6 +55,7 @@
     }
   },
   "SDK": {
+    "TooltipAlt": "Information",
     "SignInOut": {
       "SignIn": "Log In",
       "SignOut": "Log Out"
