--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -74,6 +74,10 @@
     "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
     "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
     "SaveError": "We're sorry but an error occurred",
+    "DetailsPlaceholder": {
+      "PluralForm": "characters remaining",
+      "SingularForm": "character remaining"
+    },
     "MailAddress": {
       "Fields": {
         "Name": "Full Name",
