--- a/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
+++ b/ddp-workspace/projects/ddp-prion/src/assets/i18n/he.json
@@ -31,6 +31,7 @@
       "ArrowAlt": "חֵץ"
     },
     "StudyListing": {
+      "Title": "(he)Study Listing",
       "Columns": [
         {
           "title": "שם המחקר",
@@ -161,7 +162,7 @@
       "LearnMore": "למד עוד",
       "Dashboard": "לוח המחוונים שלי",
       "JoinUs": "הצטרף אלינו",
-      "PrivacyPolicy": "he: Privacy Policy"
+      "StudyListing": "(he)Study Listing"
     },
     "Footer": {
       "BackToTop": "חזרה למעלה",
