add activities styling

--- a/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain-v2/src/assets/i18n/en.json
@@ -563,6 +563,9 @@
         }
     },
     "Toolkit": {
+        "Dashboard": {
+            "Title": "My Dashboard"
+        },
         "Dialogs": {
             "JoinMailingList": {
                 "Title": "Stay informed",
