--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/ht.json
@@ -173,7 +173,7 @@
         {
           "Name": "Lisa A. Cosimi, MD",
           "Affiliations": "Doktè ki Asosye, Brigham and Women’s Hospital; Asistan Pwofesè, Harvard Medical School",
-          "Info": "Dr. Cosimi se yon doktè asosye nan Brigham and Women’s Hospital Brigham, ki gen travay nan divizyon Global sou Tretman Egal Ego Sante ak Maladi enfeksyon konsantre sou ranfòse sistèm sante ak bon jan kalite a nan swen sante nan anviwònman resous-limite."
+          "Info": "Dr. Cosimi se yon doktè asosye nan Brigham and Women’s Hospital, ki gen travay nan divizyon Global sou Tretman Egal Ego Sante ak Maladi enfeksyon konsantre sou ranfòse sistèm sante ak bon jan kalite a nan swen sante nan anviwònman resous-limite."
         },
         {
           "Name": "Deborah T. Hung, MD, PhD",
